src/rules/snapshots/pg_migration_lint__rules__pgm203__tests__truncate_cascade_existing_also_fires.snap
---
source: src/rules/pgm203.rs
expression: findings
---
- rule_id: PGM203
  severity: Minor
  message: "TRUNCATE TABLE 'audit_trail' removes all rows from an existing table. This is irreversible and does not fire ON DELETE triggers."
  file: migrations/006.sql
  start_line: 1
  end_line: 1
